--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@eslint/js": "^9.37.0",
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
+    "prettier": "3.6.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0"
