--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
     "globals": "^16.4.0",
     "prettier": "3.6.2",
     "ts-node-dev": "^2.0.0",
