--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.4.0",
+    "jest": "^30.2.0",
     "prettier": "3.6.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
