--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "dependencies": {
-    "@types/node": "^24.6.2"
-  },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.7.2",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.4.0",
