--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "globals": "^16.4.0",
     "jest": "^30.2.0",
     "prettier": "3.6.2",
+    "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0"
