--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "main": "dist/main.js",
+  "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@types/jest": "^30.0.0",
