--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "main": "dist/main.js",
   "type": "module",
+  "scripts": {
+    "build": "tsc",
+    "dev": "node --watch src/main.ts",
+    "test": "jest --watchAll"
+  },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@types/jest": "^30.0.0",
