[#9] Add metadata to package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
+  "name": "transliterate-phonemes",
+  "description": "Transliterates between different phonemic representations of English.",
+  "keywords": [
+    "english",
+    "language",
+    "phonemes",
+    "phonetic",
+    "transliteration"
+  ],
+  "author": "Sean Turley",
+  "version": "1.0.0",
+  "license": "GPL-3.0 license",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seanmturley/transliterate-phonemes.git"
+  },
   "main": "dist/main.js",
   "type": "module",
   "scripts": {
